k8s-step-by-step/04-monitoring victoriametrics + prometheus/01-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: "system-ingress"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  tls:
    - hosts:
        - mon.k.erusnikov.ru
      secretName: mon-tls
  rules:
    - host: "mon.k.erusnikov.ru"
      http:
        paths:
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: prometheus-sys-connect
                port:
                  number: 9090
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-sys-connect
                port:
                  number: 3000
